# modou

./: AGENTS.md  BACKLOG.md  CHANGELOG.md  Cargo.toml  PROJECT.md  README.md  deny.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
crates/modou/: Cargo.toml
crates/modou/examples/: adoption.rs  rules.rs
crates/modou/src/: constitution.rs  engine.rs  lib.rs  main.rs  runner.rs
crates/modou/src/engine/: baseline.rs  cargo_metadata.rs  mod.rs  model.rs  module_scan.rs  projection.rs
crates/modou/tests/: cli.rs  dogfood.rs  self_governance.rs
crates/modou/tests/fixtures/clean/: Cargo.toml
crates/modou/tests/fixtures/layered/: Cargo.toml
crates/modou/tests/fixtures/layered/adapters/: Cargo.toml
crates/modou/tests/fixtures/layered/core/: Cargo.toml
crates/modou/tests/fixtures/layered/core/src/: lib.rs
crates/modou/tests/fixtures/module-layered/: Cargo.toml
crates/modou/tests/fixtures/module-layered/src/: kernel.rs  lib.rs
crates/modou/tests/fixtures/module-macro/: Cargo.toml
crates/modou/tests/fixtures/module-macro-invoke/: Cargo.toml
crates/modou/tests/fixtures/module-macro-invoke/src/: lib.rs
crates/modou/tests/fixtures/module-macro/src/: lib.rs
crates/modou/tests/fixtures/module-orphan/: Cargo.toml
crates/modou/tests/fixtures/module-orphan-sub/: Cargo.toml
crates/modou/tests/fixtures/module-orphan-sub/src/: kernel.rs  lib.rs
crates/modou/tests/fixtures/module-orphan-sub/src/kernel/: orphan.rs
crates/modou/tests/fixtures/module-orphan/src/: lib.rs  serde.rs
crates/modou/tests/fixtures/violating/: Cargo.toml
crates/modou/tests/fixtures/violating-multi/: Cargo.toml
crates/modou/tests/fixtures/violating-multi/core-a/: Cargo.toml
crates/modou/tests/fixtures/violating-multi/core-b/: Cargo.toml
docs/: adoption.md  development-flow.md
openspec/: config.yaml
openspec/specs/cli-check-runner/: spec.md
openspec/specs/constitution-projection/: spec.md
openspec/specs/crate-dependency-boundary/: spec.md
openspec/specs/module-boundary/: spec.md
